# audio_diarization

./: .dockerignore  .env.example  .gitignore  Caddyfile  DASHBOARD_UPDATE_SUMMARY.md  Dockerfile  README.md  debug_ali.py  docker-compose.dev.yaml  docker-compose.yaml  prometheus.yml  pyproject.toml  requirements.txt
monitoring/grafana/dashboards/: audio-service-monitoring.json  container-monitoring.json  system-monitoring.json
scripts/: check-gpu-setup.sh  cleanup_s3_files.py  init-minio.sh  init_database.py  init_models.py  manage_workers.py  start_workers.sh  worker.py
src/: __init__.py  auth.py  config.py  main.py  models.py  rq_worker.py
src/middleware/: rate_limit.py
src/routers/: system.py  transcription.py
src/schemas/: __init__.py  requests.py
src/services/: audio_processor.py  audio_tasks.py  audio_utils.py  database_service.py  format_service.py  model_cache.py  resource_manager.py  result_service.py  rq_task_manager.py  storage_service.py  url_downloader.py
src/tests/: debug_ali.py  debug_storage.py
src/utils/: logger.py  redis_client.py
