[project]
name = "audio-diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.118.1",
    "httpx>=0.28.1",
    "minio>=7.2.18",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "psutil>=7.1.0",
    "psycopg[binary]>=3.2.10",
    "pyannote-audio>=4.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis>=6.4.0",
    "rq>=2.6.0",
    "rq-dashboard>=0.8.5",
    "sqlalchemy>=2.0.43",
    "yt-dlp>=2025.9.26",
]
